<resources>
    <string name="app_name">Course Diary</string>
    <string name="action_settings">Settings</string>
    <string name="tab1_title">COURSE FEED</string>
    <string name="tab2_title">ARCHIVE</string>
    <string name="title">Title</string>
    <string name="deadline">Deadline</string>
    <string name="close">Close</string>
    <string name="new_assignment">New Assignment</string>
    <string name="create">Create</string>
    <string name="new_semester">New Semester</string>
    <string name="name">Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="add_new">Add New</string>
    <string name="semester">Semester</string>
    <string name="assignment">Assignment</string>
    <string name="photo">Photo</string>
    <string name="course">Course</string>
    <string name="empty_archive">No semesters added!</string>
    <string name="note">Note</string>
    <string name="semester_saved">Semester saved.</string>
    <string name="assignment_saved">Assignment saved.</string>
    <string name="empty_semester">No courses added!</string>
    <string name="delete">Delete</string>
    <string name="info">Info</string>
    <string name="semester_deleted">Semester has been deleted.</string>
    <string name="new_course">New Course</string>
    <string name="course_saved">Course saved.</string>
    <string name="course_deleted">Course has been deleted.</string>
    <string name="attendance_obligation">Attendance Obligation</string>
    <string name="credit">Credit</string>
    <string name="invalid_course_name">Course name is invalid!</string>
    <string name="invalid_credit">Credit is invalid!</string>
    <string name="invalid_semester">Invalid semester!</string>
    <string name="empty_schedule_warning">You have to add at least one course time!</string>
    <string name="invalid_start_time">Invalid start time!</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="invalid_end_time">Invalid end time!</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="wednesday">Wednesday</string>
    <string name="invalid_semester_name">Invalid semester name!</string>
    <string name="invalid_start_date">Invalid start date!</string>
    <string name="invalid_end_date">Invalid end date!</string>
    <string name="invalid_assignment_title">Invalid title!</string>
    <string name="invalid_deadline">Invalid deadline!</string>
    <string name="deadline_past">Deadline canot be a past date!</string>
    <string name="missing_semester_selection">Please select a semester!</string>
    <string name="missing_course_selection">Please select a course!</string>
    <string name="assignment_deleted">Assignment deleted.</string>
    <string name="edit">Edit</string>
    <string name="days_left">Days left:</string>
    <string name="gpa">GPA:</string>
    <string name="course_hour_deleted">Course hour deleted.</string>
    <string name="course_hour">Course hour</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_delete">Do you confirm delete?</string>
    <string name="course_hours">Course Hours (%d)</string>
    <string name="assignments">Assignments (%d)</string>
    <string name="grade_tv">Grade:</string>
    <string name="attendance_tv">Attendance:</string>
    <string name="min">min</string>
    <string name="mins">mins</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="week">week</string>
    <string name="weeks">weeks</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="over">Over</string>
    <string name="notes">Notes (%d)</string>
    <string name="photos">Photos (%d)</string>
    <string name="audios">Audio Records (%d)</string>
    <string name="attended">Attended</string>
    <string name="cancelled">Cancelled</string>
    <string name="new_note">New Note</string>
    <string name="note_enter">Type your note here</string>
    <string name="invalid_note_title">Invalid note title!</string>
    <string name="no_course_hours">You have to create at least one course hour!</string>
    <string name="new_course_hour">New Course Hour</string>
    <string name="save">Save</string>
    <string name="grading_system">Grading System</string>
    <string name="new_grading_system">New Grading System</string>
    <string name="grade_code">Grade Code</string>
    <string name="coefficient">Coefficient</string>
    <string name="clear">Clear</string>
    <string name="add">Add</string>
    <string name="new_photo">New Photo</string>
    <string name="grading_system_deleted">Grading system deleted.</string>
    <string name="note_deleted">Note deleted.</string>
    <string name="photo_deleted">Photo deleted.</string>
    <string name="grading_system_saved">Grading system saved.</string>
    <string name="note_saved">Note saved.</string>
    <string name="photo_saved">Photo saved.</string>
    <string name="course_hour_saved">Course hour saved.</string>
    <string name="missing_course_hour">Please select a course hour!</string>
    <string name="end_date_before">End date cannot be before start date!</string>
    <string name="date_format">%02d-%02d-%04d</string>
    <string name="clock_format">%02d:%02d</string>
    <string name="credit_format">%d</string>
    <string name="no_semester">You have to create at least one semester!</string>
    <string name="no_course">You have to create at least one course!</string>
    <string name="invalid_coefficient">Invalid coefficient!</string>
    <string name="invalid_code">Invalid code!</string>
    <string name="no_grade">Add at least one grade!</string>
    <string name="invalid_name">Invalid name</string>
    <string name="select_grade">Select Grade</string>
    <string name="settings">Settings</string>
    <string name="int_holder">%d</string>
    <string name="float_holder">%.2f</string>
    <string name="progress_holder">%.2f%%</string>
    <string name="set_grading_system_warning">You have to set grading system for this course!</string>
    <string name="int_progress_holder">%d%%</string>
    <string name="permission_grant">Permissions granted</string>
    <string name="permission_denied">Some permissions denied</string>
    <string name="audio_delete">Audio deleted.</string>
    <string name="audio_save">Audio saved.</string>
    <string name="grading_systems">Grading Systems</string>
    <string name="no_grading_systems">No grading systems!</string>
    <string name="remind_assignments">Remind assignments</string>
    <string name="before">before.</string>
    <string name="icon">Icon</string>
    <string-array name="app_contents">
        <item>@string/semester</item>
        <item>@string/course</item>
        <item>@string/assignment</item>
        <item>@string/note</item>
        <item>@string/photo</item>
        <item>@string/grading_system</item>
    </string-array>
    <string-array name="days">
        <item>@string/monday</item>
        <item>@string/tuesday</item>
        <item>@string/wednesday</item>
        <item>@string/thursday</item>
        <item>@string/friday</item>
        <item>@string/saturday</item>
        <item>@string/sunday</item>
    </string-array>
    <string-array name="settings_time">
        <item>@string/hours</item>
        <item>@string/days</item>
    </string-array>
    <string name="notification_assignment_title">Assignment Reminder</string>
    <string name="notification_assignment_message">Assignment %s has %s left to deadline!</string>
    <string name="assignment_reminder_value_warning">Assignment reminder value saved as 1!</string>
</resources>
