<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:theme="@style/AppTheme">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/gradingSystemCreationAppBarLayout"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:padding="0dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/new_grading_system"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:typeface="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/gradingSystemCreationCloseIcon"
                    android:layout_width="35dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/close"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_close_white_36dp" />

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/gradingSystemCreationAppBarLayout"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

                <EditText
                    android:id="@+id/gradingSystemNameEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:textColor="@color/darkTextColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:autofillHints="" />


                <EditText
                    android:id="@+id/grade_code_ET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/grade_code"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toBottomOf="@id/gradingSystemNameEditText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/grade_coefficient_ET"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/grade_coefficient_ET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:hint="@string/coefficient"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toEndOf="@id/grade_code_ET"
                    app:layout_constraintEnd_toStartOf="@id/addGradeButton"
                    app:layout_constraintTop_toTopOf="@id/grade_code_ET"
                    app:layout_constraintBottom_toBottomOf="@id/grade_code_ET"
                    android:autofillHints="" />

                <Button
                    android:id="@+id/addGradeButton"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/grade_coefficient_ET"
                    app:layout_constraintBottom_toBottomOf="@id/grade_coefficient_ET"/>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/gradesLayout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/grade_coefficient_ET"
                    tools:layout_editor_absoluteX="20dp">

                    <HorizontalScrollView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toStartOf="@id/gradesClearButton"
                        app:layout_constraintStart_toStartOf="parent">

                        <LinearLayout
                            android:id="@+id/gradesInsideLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:orientation="horizontal" />
                    </HorizontalScrollView>

                    <Button
                        android:id="@+id/gradesClearButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/clear"
                        app:layout_constraintEnd_toEndOf="parent" />
                </android.support.constraint.ConstraintLayout>

                <Button
                    android:id="@+id/gradingSystemCreateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create"
                    android:layout_marginTop="35dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/gradesLayout"/>

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
