<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/courseListLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_padding">

    <TextView
        android:id="@+id/semesterTitle_TV"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/semester"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textView2"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/gpa"
        app:layout_constraintBaseline_toBaselineOf="@id/semesterTitle_TV"
        app:layout_constraintEnd_toStartOf="@id/gpa_TV"
        app:layout_constraintStart_toEndOf="@id/semesterTitle_TV" />

    <TextView
        android:id="@+id/gpa_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3.10"
        android:layout_marginStart="5dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBaseline_toBaselineOf="@id/semesterTitle_TV"
        app:layout_constraintEnd_toStartOf="@id/textView3"
        app:layout_constraintStart_toEndOf="@id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/days_left"
        app:layout_constraintBaseline_toBaselineOf="@id/semesterTitle_TV"
        app:layout_constraintEnd_toStartOf="@id/daysToEnd"
        app:layout_constraintStart_toEndOf="@id/gpa_TV" />

    <TextView
        android:id="@+id/daysToEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10"
        android:layout_marginStart="5dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBaseline_toBaselineOf="@id/semesterTitle_TV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textView3" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/semesterTitle_TV" />

    <TextView
        android:id="@+id/emptySemester_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_semester"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <ListView
            android:id="@+id/courseListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line" />

</android.support.constraint.ConstraintLayout>
