<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:theme="@style/AppTheme">

    <include
        layout="@layout/creation_dialog_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/creationAppBarLayout"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

                <EditText
                    android:id="@+id/noteNameEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:textColor="@color/darkTextColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:autofillHints=""
                    tools:targetApi="o" />

                <TextView
                    android:id="@+id/noteCreationSemesterSelection_TV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/semester"
                    android:textAlignment="textEnd"
                    app:layout_constraintEnd_toEndOf="@+id/noteCreationCourseHourSelection_TV"
                    app:layout_constraintBottom_toBottomOf="@+id/noteCreationSemesterSelectionSpinner"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/noteCreationSemesterSelectionSpinner" />

                <Spinner
                    android:id="@+id/noteCreationSemesterSelectionSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="35dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/noteCreationSemesterSelection_TV"
                    app:layout_constraintTop_toBottomOf="@+id/noteNameEditText" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/course"
                    android:textAlignment="textEnd"
                    app:layout_constraintBottom_toBottomOf="@+id/noteCreationCourseSelectionSpinner"
                    app:layout_constraintEnd_toEndOf="@+id/noteCreationCourseHourSelection_TV"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/noteCreationCourseSelectionSpinner" />

                <Spinner
                    android:id="@+id/noteCreationCourseSelectionSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="35dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/noteCreationSemesterSelection_TV"
                    app:layout_constraintTop_toBottomOf="@+id/noteCreationSemesterSelectionSpinner" />

                <TextView
                    android:id="@+id/noteCreationCourseHourSelection_TV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/course_hour"
                    android:textAlignment="textEnd"
                    app:layout_constraintBottom_toBottomOf="@+id/noteCreationCourseHourSelectionSpinner"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/noteCreationCourseHourSelectionSpinner" />

                <Spinner
                    android:id="@+id/noteCreationCourseHourSelectionSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="35dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/noteCreationCourseHourSelection_TV"
                    app:layout_constraintTop_toBottomOf="@+id/noteCreationCourseSelectionSpinner" />

                <EditText
                    android:id="@+id/note_ET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/note_enter"
                    android:inputType="textMultiLine"
                    android:layout_marginTop="35dp"
                    app:layout_constraintTop_toBottomOf="@id/noteCreationCourseHourSelectionSpinner"
                    android:autofillHints=""
                    tools:targetApi="o" />

                <Button
                    android:id="@+id/noteCreateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:text="@string/create"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/note_ET" />

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>